# reactos

reactos/cmake/: config.cmake  gcc.cmake
reactos/include/asm/: CMakeLists.txt
reactos/ntoskrnl/: ntos.cmake
reactos/ntoskrnl/cache/: fssup.c
